--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,8 +1,8 @@
 spring.application.name=apicore
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://${DB_HOST}:3306/${DB_NAME}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:mysql://localhost:3306/vollmed_apicore
+spring.datasource.username=root
+spring.datasource.password=123456
 
 #mostra o sql em seguida formata o sql para uma melhor vizualização
 spring.jpa.show-sql=true
