--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 HELP.md
+README.md
 target/
 .mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
@@ -12,12 +13,15 @@ target/
 .settings
 .springBeans
 .sts4-cache
+application.properties
 
 ### IntelliJ IDEA ###
 .idea
 *.iws
 *.iml
 *.ipr
+
+
 
 ### NetBeans ###
 /nbproject/private/
@@ -31,4 +35,3 @@ build/
 
 ### VS Code ###
 .vscode/
-*.md
