feat implement messages properties

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,8 +1,8 @@
-mandatory.name=Nome é obrigatório
-mandatory.email=Email é obrigatório
-invalid.email=Formato do email é inválido
-mandatory.phone=Telefone é obrigatorio
-mandatory.crm=CRM é obrigatório
-invalid.crm=Formato do CRM é invalido
-mandatory.specialty=Especialidade é obrigatória
-mandatory.address=Dados do endereço são obrigatórios
+mandatory.name=Nome e obrigatorio
+mandatory.email=Email e obrigatorio
+invalid.email=Formato do email e invalido
+mandatory.phone=Telefone e obrigatorio
+mandatory.crm=CRM e obrigatorio
+invalid.crm=Formato do CRM e invalido
+mandatory.specialty=Especialidade e obrigatoria
+mandatory.address=Dados do endereco sao obrigatorios
